# CADalytic

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  deploy.sh  occt_feature_test.cpp
geometry/: Box.cpp  Box.hpp  CMakeLists.txt  Cylinder.cpp  Cylinder.hpp  Line3D.cpp  Line3D.h  Plane3D.cpp  Plane3D.h  Ray3D.cpp  Ray3D.h  Shape.cpp  Shape.hpp
geometry/include/cadalytic/: GeomEdge.h  GeomFace.h  GeomShape.h  GeomSolid.h  GeomVertex.h  Result.h  Tessellator.h  TransformOps.h
geometry/src/: BooleanOps.cpp  GeomEdge.cpp  GeomFace.cpp  GeomShape.cpp  GeomSolid.cpp  GeomVertex.cpp  Tessellator.cpp  TransformOps.cpp
math/: Bounds.h  MathUtils.h  Matrix3.h  Matrix4.h  Quaternion.h  Transform.h  Vector2.h  Vector3.h  Vector4.h
src/: MainWindow.cpp  MainWindow.h  Occt3DView.cpp  Occt3DView.h  Occt3DWidget.cpp  Occt3DWidget.h  OcctViewWidget.cpp  OcctViewWidget.h  main.cpp
